# compiladores

./: CMakeCache.txt  Makefile  README  cmake_install.cmake  compileAndRun.sh  hash.c  lexer.c  main  main.c  scanner.l
entradas/: nivel0.tokens
etapa1/: hash.h  scanner.l
etapa2/: .main.c.swp  CMakeLists.txt  main.c  parser.y  scanner.l  teste.sh
etapa2/ex/: certo02.txt  certo03.txt  certo04.txt  certo05.txt  certo07.txt  certo10.txt  certo15.txt  certo20.txt  errado01.txt  errado02.txt  errado03.txt  errado04.txt  errado05.txt  errado06.txt  errado07.txt  errado08.txt  errado09.txt  errado10.txt  errado11.txt  errado12.txt  errado13.txt  errado14.txt  errado15.txt  errado16.txt  errado17.txt  errado18.txt  errado19.txt  errado20.txt
etapa3/: CMakeLists.txt  ast.c  ast.h  main.c  parser.y  scanner.l  teste.sh
etapa3/ex/: certo01.txt  certo06.txt  certo08.txt  certo14.txt
etapa4/: CMakeLists.txt  ast.c  ast.h  error_handling.h  hash.c  hash.h  main.c  parser.y  scanner.l  semantica.c  semantica.h  test.sh  teste.sh
etapa4/input/: certo01.txt~  certo05.txt  certo06.txt  certo09.txt  certo10.txt  certo13.txt  certo17.txt  certo19.txt  certo20.txt  certo21.txt
etapa4/src/: main.cpp  symbol.cpp  symbol.h
etapa4/src/parser/: parser.cpp  parser.hpp  parser.y
etapa4/src/scanner/: scanner.cpp  scanner.l
etapa4/src/tree/: assignmentnode.cpp  assignmentnode.h  blocknode.cpp  blocknode.h  common.h  declarevarnode.cpp  declarevarnode.h  declarevectornode.cpp  declarevectornode.h  definefunctionnode.cpp  definefunctionnode.h  expressionnode.h  functioncallnode.cpp  functioncallnode.h  functiondefinitionnode.cpp  functiondefinitionnode.h  headernode.cpp  headernode.h  identifiernode.cpp  identifiernode.h  ifnode.cpp  ifnode.h  inputnode.cpp  inputnode.h  literalnode.cpp  literalnode.h  node.cpp  node.h  operationnode.cpp  operationnode.h  outputnode.cpp  outputnode.h  programnode.cpp  programnode.h  returnnode.cpp  returnnode.h  typenode.cpp  typenode.h  vardeclarationnode.cpp  vardeclarationnode.h  (+4 more)
etapa5/: CMakeLists.txt
etapa5/input/: certo01.txt  certo11.txt  certo12.txt  certo14.txt  certo16.txt  certo18.txt
etapa5/src/parser/: parser.y
etapa5/src/tree/: expressionnode.cpp  functiondefinitionnode.h  inputnode.h  literalnode.cpp  operationnode.cpp  operationnode.h  outputnode.cpp  returnnode.h
