CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT(compiladorEtapa2)
FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)
FLEX_TARGET(scanner scanner.l  ${CMAKE_CURRENT_BINARY_DIR}/scanner.c)
BISON_TARGET(parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${compiladorEtapa2_SOURCE_DIR})
ADD_EXECUTABLE(main main.c ${FLEX_scanner_OUTPUTS} ${BISON_parser_OUTPUTS} ast.c semantica.c)
TARGET_LINK_LIBRARIES(main ${FLEX_LIBRARIES})
